tests/syntax/trailing_dot_method_bad_indent.ca

def int.increment(i)
  i + 1

def f()
    a = 1
      .increment
  .increment

assert(f() == 3)
